src/Domain/Compiler/Tests/Expression/TypeCast/__Baselines__/BinaryExpression_DownCastOverflow-StashIr.error
error: Integral expression of type 'u32 4294967296' exceeds maximum value of type 'u32'.
--> main.hs:8:20
  | 
8 |         return 1 + x as u32;
  |                    ^
